--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -257,7 +257,7 @@
             <v:RevisionCompare/>
           </DataTemplate>
 
-          <DataTemplate DataType="x:Int32">
+          <DataTemplate DataType="m:Count">
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
               <Path Width="128" Height="128"
                     Data="{StaticResource Icons.Detail}"
@@ -268,7 +268,7 @@
                          Margin="0,16"
                          FontSize="24" FontWeight="Bold"
                          Foreground="{DynamicResource Brush.FG2}"
-                         Text="{Binding Converter={x:Static c:StringConverters.FormatByResourceKey}, ConverterParameter='Histories.Selected'}"/>
+                         Text="{Binding Value, Converter={x:Static c:StringConverters.FormatByResourceKey}, ConverterParameter='Histories.Selected'}"/>
             </StackPanel>
           </DataTemplate>
         </ContentControl.DataTemplates>
