--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -178,12 +178,12 @@
             <Button Classes="icon_button"
                     Width="28"
                     Command="{Binding OpenExternalMergeTool}"
-                    HotKey="{OnPlatform Ctrl+D, macOS=⌘+D}">
+                    HotKey="{OnPlatform Ctrl+Alt+D, macOS=⌘+⌥+D}">
               <ToolTip.Tip>
                 <TextBlock>
                   <Run Text="{DynamicResource Text.Diff.UseMerger}"/>
                   <Run Text=" "/>
-                  <Run Text="{OnPlatform Ctrl+D, macOS=⌘+D}" Foreground="{DynamicResource Brush.FG2}"/>
+                  <Run Text="{OnPlatform Ctrl+Alt+D, macOS=⌘+⌥+D}" Foreground="{DynamicResource Brush.FG2}"/>
                 </TextBlock>
               </ToolTip.Tip>
               <Path Width="12" Height="12" Stretch="Uniform" Data="{StaticResource Icons.OpenWith}"/>
