fix: remove binding error in debug mode (#1338)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/TagsView.axaml
+++ b/src/Views/TagsView.axaml
@@ -65,7 +65,7 @@
                 <TextBlock Grid.Column="2"
                            Classes="primary"
                            Margin="8,0,0,0">
-                  <Run Text="{Binding FullPath, Converter={x:Static c:PathConverters.PureFileName}}"/>
+                  <Run Text="{Binding FullPath, Converter={x:Static c:PathConverters.PureFileName}, Mode=OneWay}"/>
                   <Run Text="{Binding TagsCount}" Foreground="{DynamicResource Brush.FG2}"/>
                 </TextBlock>
 
