--- a/src/Views/CommitChanges.axaml
+++ b/src/Views/CommitChanges.axaml
@@ -58,8 +58,10 @@
       <Border Grid.Row="2" BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="1,0,1,1" Background="Transparent">
         <TextBlock Margin="4,0,0,0"
                    Foreground="{DynamicResource Brush.FG2}"
-                   Text="{Binding Changes.Count, Converter={x:Static c:StringConverters.FormatByResourceKey}, ConverterParameter='CommitDetail.Changes.Count', Mode=OneWay}"
-                   HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                   HorizontalAlignment="Left" VerticalAlignment="Center">
+          <Run Text="{Binding Changes, Converter={x:Static c:ListConverters.Count}, Mode=OneWay}" FontWeight="Bold"/>
+          <Run Text="{DynamicResource Text.CommitDetail.Changes.Count}"/>
+        </TextBlock>
       </Border>
     </Grid>
 
