fix: remove binding error in debug mode (#1338)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/SubmodulesView.axaml
+++ b/src/Views/SubmodulesView.axaml
@@ -108,7 +108,7 @@
                            Classes="primary"
                            Margin="8,0,0,0"
                            TextTrimming="CharacterEllipsis">
-                  <Run Text="{Binding FullPath, Converter={x:Static c:PathConverters.PureFileName}}"/>
+                  <Run Text="{Binding FullPath, Converter={x:Static c:PathConverters.PureFileName}, Mode=OneWay}"/>
                   <Run Text="{Binding ChildCounter}" Foreground="{DynamicResource Brush.FG2}"/>
                 </TextBlock>
 
