--- a/src/Views/CreateBranch.axaml
+++ b/src/Views/CreateBranch.axaml
@@ -14,7 +14,7 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.CreateBranch.Title}"/>
-    <Grid Margin="0,16,0,0" RowDefinitions="32,32,Auto,Auto,Auto,Auto" ColumnDefinitions="140,*">
+    <Grid Margin="0,16,0,0" RowDefinitions="32,32,Auto,32,Auto,Auto,Auto" ColumnDefinitions="140,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
@@ -80,11 +80,16 @@
       </Border>
 
       <CheckBox Grid.Row="4" Grid.Column="1"
+                Content="{DynamicResource Text.CreateBranch.OverwriteExisting}"
+                IsChecked="{Binding AllowOverwrite, Mode=TwoWay}"
+                ToolTip.Tip="checkout -B or branch -f"/>
+
+      <CheckBox Grid.Row="5" Grid.Column="1"
                 Content="{DynamicResource Text.CreateBranch.Checkout}"
                 IsChecked="{Binding CheckoutAfterCreated, Mode=TwoWay}"
                 IsVisible="{Binding !IsBareRepository}"/>
 
-      <CheckBox Grid.Row="5" Grid.Column="1"
+      <CheckBox Grid.Row="6" Grid.Column="1"
                 Content="{DynamicResource Text.Checkout.RecurseSubmodules}"
                 IsChecked="{Binding RecurseSubmodules, Mode=TwoWay}"
                 ToolTip.Tip="--recurse-submodules">
