enhance: allow to use arrow keys to select changes up/down after stage/unstage previous selected changes by hotkey (#1361)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/ChangeCollectionView.axaml
+++ b/src/Views/ChangeCollectionView.axaml
@@ -30,7 +30,8 @@
 
   <UserControl.DataTemplates>
     <DataTemplate DataType="vm:ChangeCollectionAsTree">
-      <v:ChangeCollectionContainer ItemsSource="{Binding Rows}"
+      <v:ChangeCollectionContainer Focusable="True"
+                                   ItemsSource="{Binding Rows}"
                                    SelectedItems="{Binding SelectedRows, Mode=TwoWay}"
                                    SelectionMode="{Binding #ThisControl.SelectionMode}"
                                    SelectionChanged="OnRowSelectionChanged">
@@ -66,7 +67,8 @@
     </DataTemplate>
 
     <DataTemplate DataType="vm:ChangeCollectionAsGrid">
-      <v:ChangeCollectionContainer ItemsSource="{Binding Changes}"
+      <v:ChangeCollectionContainer Focusable="True"
+                                   ItemsSource="{Binding Changes}"
                                    SelectedItems="{Binding SelectedChanges, Mode=TwoWay}"
                                    SelectionMode="{Binding #ThisControl.SelectionMode}"
                                    SelectionChanged="OnRowSelectionChanged">
@@ -98,7 +100,8 @@
     </DataTemplate>
 
     <DataTemplate DataType="vm:ChangeCollectionAsList">
-      <v:ChangeCollectionContainer ItemsSource="{Binding Changes}"
+      <v:ChangeCollectionContainer Focusable="True"
+                                   ItemsSource="{Binding Changes}"
                                    SelectedItems="{Binding SelectedChanges, Mode=TwoWay}"
                                    SelectionMode="{Binding #ThisControl.SelectionMode}"
                                    SelectionChanged="OnRowSelectionChanged">
