--- a/src/Views/InteractiveRebase.axaml
+++ b/src/Views/InteractiveRebase.axaml
@@ -143,7 +143,8 @@
                         </MenuItem.Header>
                       </MenuItem>
 
-                      <MenuItem InputGesture="S" Command="{Binding SetAction}" CommandParameter="{x:Static m:InteractiveRebaseAction.Squash}">
+                      <MenuItem InputGesture="S" Command="{Binding SetAction}" CommandParameter="{x:Static m:InteractiveRebaseAction.Squash}"
+                                IsVisible="{Binding HasParent}">
                         <MenuItem.Icon>
                           <Ellipse Width="14" Height="14" Fill="LightGray"/>
                         </MenuItem.Icon>
@@ -155,7 +156,8 @@
                         </MenuItem.Header>
                       </MenuItem>
 
-                      <MenuItem InputGesture="F" Command="{Binding SetAction}" CommandParameter="{x:Static m:InteractiveRebaseAction.Fixup}">
+                      <MenuItem InputGesture="F" Command="{Binding SetAction}" CommandParameter="{x:Static m:InteractiveRebaseAction.Fixup}"
+                                IsVisible="{Binding HasParent}">
                         <MenuItem.Icon>
                           <Ellipse Width="14" Height="14" Fill="LightGray"/>
                         </MenuItem.Icon>
